Revert "Update _site.scss"
This reverts commit 3294ecf4c5829cfd92fc9ec926d6917ea471271a.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
 <header class="header">
-  <div class="header-title">
-    <a href="{{ site.url }}{{ site.baseurl }}">{{ site.name }}</a>
-  </div>
+  <h1 class="header-title">
+    <a href="{{ site.url }}{{ site.baseurl }}">{{ site.name }}<span>&#39;s blog</span></a>
+  </h1>
   <nav class="header-nav">
     {% for nav in site.nav %}
     {% if nav.url contains 'http://' or nav.url contains 'https://' %}
@@ -50,7 +50,8 @@ layout: default
     <span class="list-pagination-previous">
       {% if paginator.previous_page %}
         <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}" class="previous">
-          &#xE000; previous
+          <i class="fa fa-arrow-left" aria-hidden="true"></i>
+          Previous
         </a>
       {% else %}
 
@@ -60,7 +61,8 @@ layout: default
     <span class="list-pagination-next">
       {% if paginator.next_page %}
         <a href="{{ paginator.next_page_path | prepend: site.baseurl }}" class="next">
-          next &#xE001;
+          Next
+          <i class="fa fa-arrow-right" aria-hidden="true"></i>
         </a>
       {% else %}
 
